After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 641912 - Crash in substitute_underscores at gtkaccellabel.c:609
Crash in substitute_underscores at gtkaccellabel.c:609
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: Other
2.99.x
Other Linux
: Normal critical
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2011-02-09 11:19 UTC by Milan Crha
Modified: 2011-02-09 22:33 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Milan Crha 2011-02-09 11:19:45 UTC
I just updated gtk+ from git master (at commit 8291530) and recompiled evolution and such against it. When I doubleclick a message in a message list, which is supposed to open that message in a new window, then I get this crash instead:

Program received signal SIGSEGV, Segmentation fault.
0x00007ffff41c98ed in substitute_underscores (str=0x7ffff3f3ad85 "Page_Down") at gtkaccellabel.c:609
609	      *p = ' ';

(gdb) bt
  • #0 substitute_underscores
    at gtkaccellabel.c line 609
  • #1 _gtk_accel_label_class_get_accelerator_label
    at gtkaccellabel.c line 850
  • #2 gtk_accel_label_refetch
    at gtkaccellabel.c line 900
  • #3 label_shortcut_setting_apply
    at gtklabel.c line 1608
  • #4 gtk_label_screen_changed
    at gtklabel.c line 1722
  • #5 g_cclosure_marshal_VOID__OBJECT
    at gmarshal.c line 638
  • #6 g_type_class_meta_marshal
    at gclosure.c line 878
  • #7 g_closure_invoke
    at gclosure.c line 767
  • #8 signal_emit_unlocked_R
    at gsignal.c line 3290
  • #9 g_signal_emit_valist
    at gsignal.c line 2983
  • #10 g_signal_emit
    at gsignal.c line 3040
  • #11 do_screen_change
    at gtkwidget.c line 8546
  • #12 gtk_widget_propagate_hierarchy_changed_recurse
    at gtkwidget.c line 8566
  • #13 gtk_menu_item_forall
    at gtkmenuitem.c line 2440
  • #14 gtk_image_menu_item_forall
    at gtkimagemenuitem.c line 630
  • #15 gtk_container_forall
    at gtkcontainer.c line 1903
  • #16 gtk_widget_propagate_hierarchy_changed_recurse
    at gtkwidget.c line 8569
  • #17 _gtk_widget_propagate_hierarchy_changed
    at gtkwidget.c line 8607
  • #18 gtk_widget_set_parent
    at gtkwidget.c line 7714
  • #19 gtk_menu_shell_real_insert
    at gtkmenushell.c line 572
  • #20 gtk_menu_real_insert
    at gtkmenu.c line 1367
  • #21 gtk_menu_shell_insert
    at gtkmenushell.c line 560
  • #22 update_node
    at gtkuimanager.c line 2629
  • #23 update_node
    at gtkuimanager.c line 2786
  • #24 update_node
    at gtkuimanager.c line 2786
  • #25 update_node
    at gtkuimanager.c line 2786
  • #26 update_node
    at gtkuimanager.c line 2786
  • #27 update_node
    at gtkuimanager.c line 2786
  • #28 do_updates
    at gtkuimanager.c line 2828
  • #29 gtk_ui_manager_ensure_update
    at gtkuimanager.c line 2883
  • #30 e_mail_reader_create_charset_menu
    at e-mail-reader.c line 4256
  • #31 mail_browser_constructed
    at e-mail-browser.c line 617
  • #32 g_object_newv
    at gobject.c line 1507
  • #33 g_object_new_valist
    at gobject.c line 1596
  • #34 g_object_new
    at gobject.c line 1311
  • #35 e_mail_browser_new
    at e-mail-browser.c line 964
  • #36 e_mail_reader_open_selected
    at e-mail-reader-utils.c line 299
  • #37 mail_paned_view_open_selected_mail
    at e-mail-paned-view.c line 914
  • #38 mail_paned_view_reader_open_selected_mail
    at e-mail-paned-view.c line 563
  • #39 e_mail_reader_open_selected_mail
    at e-mail-reader.c line 4135
  • #40 mail_shell_content_open_selected_mail
    at e-mail-shell-content.c line 251
  • #41 e_mail_reader_open_selected_mail
    at e-mail-reader.c line 4135
  • #42 action_mail_message_open_cb
    at e-mail-reader.c line 952
  • #43 g_cclosure_marshal_VOID__VOID
    at gmarshal.c line 79
  • #44 g_closure_invoke
    at gclosure.c line 767
  • #45 signal_emit_unlocked_R
    at gsignal.c line 3252
  • #46 g_signal_emit_valist
    at gsignal.c line 2983
  • #47 g_signal_emit
    at gsignal.c line 3040
  • #48 _gtk_action_emit_activate
    at gtkaction.c line 799
  • #49 gtk_action_activate
    at gtkaction.c line 829
  • #50 e_mail_reader_activate
    at e-mail-reader-utils.c line 60
  • #51 mail_reader_double_click_cb
    at e-mail-reader.c line 2471
  • #52 e_marshal_VOID__INT_POINTER_INT_BOXED
    at e-marshal.c line 1381
  • #53 g_closure_invoke
    at gclosure.c line 767
  • #54 signal_emit_unlocked_R
    at gsignal.c line 3252
  • #55 g_signal_emit_valist
    at gsignal.c line 2983
  • #56 g_signal_emit
    at gsignal.c line 3040
  • #57 item_double_click
    at e-tree.c line 865
  • #58 e_marshal_VOID__INT_INT_BOXED
    at e-marshal.c line 1093
  • #59 g_closure_invoke
    at gclosure.c line 767
  • #60 signal_emit_unlocked_R
    at gsignal.c line 3252
  • #61 g_signal_emit_valist
    at gsignal.c line 2983
  • #62 g_signal_emit
    at gsignal.c line 3040
  • #63 eti_event
    at e-table-item.c line 2407
  • #64 gnome_canvas_marshal_BOOLEAN__BOXED
    at gnome-canvas-marshal.c line 128
  • #65 g_type_class_meta_marshal
    at gclosure.c line 878
  • #66 g_closure_invoke
    at gclosure.c line 767
  • #67 signal_emit_unlocked_R
    at gsignal.c line 3290
  • #68 g_signal_emit_valist
    at gsignal.c line 2993
  • #69 g_signal_emit_by_name
    at gsignal.c line 3077
  • #70 canvas_emit_event
    at e-canvas.c line 151
  • #71 canvas_button_event
    at e-canvas.c line 488
  • #72 _gtk_marshal_BOOLEAN__BOXED
    at gtkmarshalers.c line 85
  • #73 g_type_class_meta_marshal
    at gclosure.c line 878
  • #74 g_closure_invoke
    at gclosure.c line 767
  • #75 signal_emit_unlocked_R
    at gsignal.c line 3290
  • #76 g_signal_emit_valist
    at gsignal.c line 2993
  • #77 g_signal_emit
    at gsignal.c line 3040
  • #78 gtk_widget_event_internal
    at gtkwidget.c line 6066
  • #79 gtk_widget_event
    at gtkwidget.c line 5780
  • #80 gtk_propagate_event
    at gtkmain.c line 2588
  • #81 gtk_main_do_event
    at gtkmain.c line 1824
  • #82 _gdk_event_emit
    at gdkevents.c line 71
  • #83 gdk_event_source_dispatch
    at gdkeventsource.c line 318
  • #84 g_main_dispatch
    at gmain.c line 2440
  • #85 g_main_context_dispatch
    at gmain.c line 3013
  • #86 g_main_context_iterate
    at gmain.c line 3091
  • #87 g_main_loop_run
    at gmain.c line 3299
  • #88 gtk_main
    at gtkmain.c line 1349
  • #89 main
    at main.c line 734